--- a/playground/package.json
+++ b/playground/package.json
@@ -1,16 +1,19 @@
 {
   "name": "playground",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@metamorfosilab/auto-form-vue": "workspace:*"
+    "auto-form-vue": "workspace:*",
+    "vue": "^3.4.15"
   },
   "devDependencies": {
-    "pathe": "^1.1.2",
-    "typescript": "5.3.3",
-    "vite": "^5.0.8"
+    "@vitejs/plugin-vue": "^5.0.3",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.0",
+    "vue-tsc": "^1.8.27"
   }
 }
