--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "dist"
   ],
   "scripts": {
-    "dev": "npm-run-all --parallel lib:dev play:dev",
+    "dev": "npm-run-all --parallel lib:dev play:dev docs:dev",
     "build": "pnpm rollup:full & pnpm rollup:core",
     "lib:dev": "rollup --config rollup-full.config.ts --configPlugin @rollup/plugin-typescript --watch",
     "rollup:full": "rollup --config rollup-full.config.ts --configPlugin @rollup/plugin-typescript",
@@ -57,6 +57,7 @@
     "@types/gtag.js": "^0.0.18",
     "@types/node": "^20.10.7",
     "@types/postcss-import": "^14.0.3",
+    "@vitejs/plugin-vue": "^5.0.3",
     "@vitest/coverage-istanbul": "^1.2.2",
     "bumpp": "^9.2.1",
     "cssnano": "^6.0.3",
@@ -69,7 +70,7 @@
     "rimraf": "^5.0.5",
     "rollup": "^4.9.6",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-ts": "^3.4.5",
+    "rollup-plugin-typescript2": "^0.36.0",
     "simple-git-hooks": "^2.9.0",
     "tslib": "^2.6.2",
     "typescript": "5.3.3",
